# bazelrc-lsp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  extract_bazel_flags.py
.github/workflows/: build.yml
examples/: edge_cases.bazelrc  file2.bazelrc  line-styles.bazelrc  unformatted.bazelrc
proto/flag-dumps/: 7.1.0.data
src/: bazel_flags.rs  bazel_flags_proto.rs  bazel_version.rs  completion.rs  definition.rs  diagnostic.rs  file_utils.rs  formatting.rs  language_server.rs  lib.rs  line_index.rs  lsp_utils.rs  main.rs  parser.rs  semantic_token.rs  tokenizer.rs
vscode-extension/: .eslintrc.js  bazelrc-language-configuration.json  build.js  package.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/src/: extension.ts
