[package]
name = "bazelrc-lsp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
chumsky = { version = "0.9.3" }
dashmap = "6.1.0"
ropey = "1.6.1"
prost = "0.13.4"
phf = { version = "0.11.3", features = ["macros"] }

[build-dependencies]
prost-build = { version = "0.13.4" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
